Build working fr this time lmao

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,8 @@
                 "${workspaceFolder}/src/main.cpp",
                 "${workspaceFolder}/src/glad.c",
                 "-lglfw3",
+                "-lgdi32",
+                "-luser32",
                 "-o",
                 "${workspaceFolder}/Raumschiff.exe"
             ],
